--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -1,65 +1,91 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <link rel="stylesheet"
+          href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+          crossorigin="anonymous">
     <title>Update Question</title>
-    <link rel="stylesheet" type="text/css" th:href="@{/css/addcss.css}">
+    <style>
+	.button {
+  display: inline-block;
+  padding: 10px 20px;
+  font-size: 24px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+  background-color: #ff0080;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 9px #999;
+}
+
+.button:hover {background-color: #ff0040}
+
+.button:active {
+  background-color: #ff0040;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+
+	.header {
+  background-color: #ff0080;
+  padding: 20px;
+  text-align: center;
+}
+  </style>
 </head>
 <body>
-<div class="heading" align="center" >
-    <h3>UPDATE QUESTION</h3>
+<div class="header">
+    <br><h1> Add Question</h1><br>
 </div>
-    <form method="get" th:action="@{/updateQuestion}" th:object="${qId}">
-        <table>
-            <tr>
-                <td>Question_ID</td>
-                <td><input type="text" th:field="*{id}" readonly="readonly"/></td>
-            </tr>
-            <tr>
-                <td>Question</td>
-                <td><input type="text" th:field="*{question}" /></td>
-            </tr>
-            <tr>
-                <td>Option_1</td>
-                <td><input type="text" th:field="*{option1}"/></td>
-            </tr>
-            <tr>
-                <td>Option_2</td>
-                <td><input type="text" th:field="*{option2}"/></td>
-            </tr>
+<div class="container my-5">
+<div class="card">
+<div class="card-body">
+<div class="col-md-10">
 
-            <tr>
-                <td>Option_3</td>
-                <td><input type="text" th:field="*{option3}"/></td>
-            </tr>
+        <form action="#"  th:object="${techModel}" th:action="@{//updateQuestion}" method="GET">
+            <div class="col-md-6">
+            <br>
+                <label> Question</label>
+                <input type="text" id="question" th:field="*{question}" class="form-control"
+                placeholder="Question">
+                <label> Answer</label>
+                <input type="text" id="answer" th:field="*{answer}" class="form-control"
+                       placeholder="Answer">
+                        <label> Option1</label>
+                <input type="text" id="option1" th:field="*{option1}" class="form-control"
+                       placeholder="Option1">
+                        <label> Option2</label>
+                <input type="text" id="option2" th:field="*{option2}" class="form-control"
+                       placeholder="Option2">
+                        <label> Option3</label>
+                <input type="text" id="option3" th:field="*{option3}" class="form-control"
+                       placeholder="Option3">
+                       <label> Option4</label>
+                <input type="text" id="option4" th:field="*{option4}" class="form-control"
+                       placeholder="Option4">
+                       <div class="form-group col-md-8">
+			<label for="question" class="col-form-label">Level of exam</label>
+			<select name="level">
+			<option th:each="levelOpt : ${T(com.lxisoft.domain.enumeration.ExamLevel).values()}" 
+			th:value="${levelOpt}" th:text="${levelOpt}"></option>
+			</select>
+			</div>
+                <input type="submit" class="button" value=Update></button></center>
+            </div>
 
-            <tr>
-                <td>Option_4</td>
-                <td><input type="text" th:field="*{option4}"/></td>
-            </tr>
-
-            <tr>
-                <td>Answer</td>
-                <td><input type="text" th:field="*{answer}"/></td>
-            </tr>
-
-            <tr>
-                <td colspan="2" align="center"><button type = "submit" onclick="msg()">Save</button></td>
-            </tr>
-
-        </table>
-
+        </div>
     </form>
+    <div class="col-md-6">
+                <center><a href="http://localhost:8081/techquiz"><input type="submit" class="button" value=Back></button></center>
+            </div>
 </div>
-    <script>
-        <script type="text/javascript">
-
-			function msg()
-			{
-				confirm("Successfully Updated.....");
-		
-	}
-
-	</script>
+</div>
+</div>
+</div>
 </body>
 </html>
