--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -1,91 +1,55 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet"
-          href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-          crossorigin="anonymous">
-    <title>Update Question</title>
-    <style>
-	.button {
-  display: inline-block;
-  padding: 10px 20px;
-  font-size: 24px;
-  cursor: pointer;
-  text-align: center;
-  text-decoration: none;
-  outline: none;
-  color: #fff;
-  background-color: #ff0080;
-  border: none;
-  border-radius: 15px;
-  box-shadow: 0 9px #999;
-}
-
-.button:hover {background-color: #ff0040}
-
-.button:active {
-  background-color: #ff0040;
-  box-shadow: 0 5px #666;
-  transform: translateY(4px);
-}
-
-	.header {
-  background-color: #ff0080;
-  padding: 20px;
-  text-align: center;
-}
-  </style>
+<meta charset="utf-8">
+<meta http-equiv="x-ua-compatible" content="ie=edge">
+<title>Update User</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet"
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+	crossorigin="anonymous">
+<link rel="stylesheet"
+	href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
+	integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
+	crossorigin="anonymous">
 </head>
 <body>
-<div class="header">
-    <br><h1> Add Question</h1><br>
-</div>
-<div class="container my-5">
-<div class="card">
-<div class="card-body">
-<div class="col-md-10">
-
-        <form action="#"  th:object="${techModel}" th:action="@{//updateQuestion}" method="GET">
-            <div class="col-md-6">
-            <br>
-                <label> Question</label>
-                <input type="text" id="question" th:field="*{question}" class="form-control"
-                placeholder="Question">
-                <label> Answer</label>
-                <input type="text" id="answer" th:field="*{answer}" class="form-control"
-                       placeholder="Answer">
-                        <label> Option1</label>
-                <input type="text" id="option1" th:field="*{option1}" class="form-control"
-                       placeholder="Option1">
-                        <label> Option2</label>
-                <input type="text" id="option2" th:field="*{option2}" class="form-control"
-                       placeholder="Option2">
-                        <label> Option3</label>
-                <input type="text" id="option3" th:field="*{option3}" class="form-control"
-                       placeholder="Option3">
-                       <label> Option4</label>
-                <input type="text" id="option4" th:field="*{option4}" class="form-control"
-                       placeholder="Option4">
-                       <div class="form-group col-md-8">
-			<label for="question" class="col-form-label">Level of exam</label>
-			<select name="level">
-			<option th:each="levelOpt : ${T(com.lxisoft.domain.enumeration.ExamLevel).values()}" 
-			th:value="${levelOpt}" th:text="${levelOpt}"></option>
-			</select>
+	<div class="container my-5">
+	<h3> Update Question</h3>
+		<div class="card">
+			<div class="card-body">
+				<div class="col-md-8">
+						<form action="#" th:action = "@{/updateQ}" method="GET" th:object="${updateQ}">
+						<div class="row">
+                
+                <div class="form-group col-md-6">
+								<label for="id" class="col-form-label">ID</label> <input
+									type="text" th:field="*{id}" class="form-control" id="id"
+									placeholder="ID">
+							</div>
+						
+							<div class="form-group col-md-6">
+								<label for="question" class="col-form-label">Question</label> <input
+									type="text" th:field="*{question.question}" class="form-control" id="question"
+									placeholder="New Question">
+							</div>
+							
+							<div class="form-group col-md-6">
+								<label for="answer" class="col-form-label">Answer</label> <input
+									type="text" th:field="*{answer.answer}" class="form-control" id="answer"
+									placeholder="New Answer"> 
+							</div>
+							
+							<div class="form-group col-md-8">
+								<input type="submit" class="btn btn-primary"
+									value="Update Question">
+							</div>
+						</div>
+					</form>
+				</div>
 			</div>
-                <input type="submit" class="button" value=Update></button></center>
-            </div>
-
-        </div>
-    </form>
-    <div class="col-md-6">
-                <center><a href="http://localhost:8081/techquiz"><input type="submit" class="button" value=Back></button></center>
-            </div>
-</div>
-</div>
-</div>
-</div>
+		</div>
+	</div>
 </body>
 </html>
