--- a/src/main/resources/templates/addquestion.html
+++ b/src/main/resources/templates/addquestion.html
@@ -71,8 +71,8 @@
                        <div class="form-group col-md-8">
 			<label for="question" class="col-form-label">Level of exam</label>
 			<select name="level">
-			<option th:each="levelOpt : ${T(com.lxisoft.domain.enumeration.ExamLevel).values()}" 
-			th:value="${levelOpt}" th:text="${levelOpt}"></option>
+			<option th:each="questionlevel : ${T(com.lxisoft.domain.enumeration.QuestionLevel).values()}" 
+			th:value="${questionlevel}" th:text="${questionlevel}"></option>
 			</select>
 			</div>
                 <input type="submit" class="button" value=Add></button></center>
