--- a/src/main/resources/templates/deleteExam.html
+++ b/src/main/resources/templates/deleteExam.html
@@ -6,11 +6,11 @@
    
 </head>
 <body>
-<form action="/viewAllQn" method="GET">
+<form action="/viewAll" method="GET">
 		
 	<h1 align="center">Do you want to delete?</h1>  
     <center><input type="submit" class="button" value=Yes></button></form>
-    <a href="viewAllQn"><input type="submit" class="button" value=No></a></button></center>
+    <a href="viewAll"><input type="submit" class="button" value=No></a></button></center>
 
 </body>
 </html>
