--- a/src/main/resources/templates/questionview.html
+++ b/src/main/resources/templates/questionview.html
@@ -48,7 +48,7 @@
 <div class="header">
 <form action="<%=request.getRequestURL()%>" name="forma">
 Seconds remaining: <span id="clock"><%=clock%></span>
-
+</form>
     <h1 align="center">Questions</h1>
 </div>
 
@@ -59,6 +59,22 @@ Seconds remaining: <span id="clock"><%=clock%></span>
 <h2> Question : <a th:text = "${listQuestion.question}"> </h2>
 <h3> Question Level : <a th:text = "${listQuestion.questionlevel}"> </h3>
 
+<tr th:each="question: option : ${listQuestion}">
+<div th:text="${option.index + 1}">1</div>
+    <div th:text="${question.qnOptions}">John</div>
+    
+</tr>
+
+<input type="radio" id="option" name="option" value="1">
+
+  <br>
+  <input type="radio" id="option" name="option" value="2">
+ <br>
+  <input type="radio" id="option" name="option" value="3">
+  <br>
+  <input type="radio" id="option" name="option" value="4">
+  <br>
+  <div align = "center"><button class="button">NEXT</button></div>
 
 </form>
 
