--- a/src/main/resources/templates/createxam.html
+++ b/src/main/resources/templates/createxam.html
@@ -69,6 +69,7 @@
 			</select>
 			</div>
 			<tr><div class="form-group col-md-8">
+			<a th:href="/@{/users/export}">Export to File</a>
 			<center><input type="submit" class="button" value=Submit>
 			</form>
 	</div>
