--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -61,12 +61,10 @@
                 <td th:text="${list.question}"></td>
                 <td th:text="${list.questionlevel}"></td>
                 <th:block th:each ="answer : ${list.answer}">
-                <td th:text="${answer.answer}"></td>
+                <td th:text="${answer.answer}"></td></th:block>
                  <td><a th:href="@{/delete/{id}(id=${list.id})}">Delete</a></td>
                 <td><a th:href="@{/update/{id}(id=${list.id})}">Edit</a></td>
                
-
-
         </table>
     <br>
 <center><a href="http://localhost:8081/techquiz"><input type="submit" class="button" value=Back></button></center>
