http://jira.bytatech.com:8080/browse/IN-10763

--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -31,13 +31,13 @@
 						
 							<div class="form-group col-md-6">
 								<label for="question" class="col-form-label">Question</label> <input
-									type="text" th:field="*{question.question}" class="form-control" id="question"
+									type="text" th:field="*{question}" class="form-control" id="question"
 									placeholder="New Question">
 							</div>
 							
 							<div class="form-group col-md-6">
 								<label for="answer" class="col-form-label">Answer</label> <input
-									type="text" th:field="*{answer.answer}" class="form-control" id="answer"
+									type="text" th:field="*{answer}" class="form-control" id="answer"
 									placeholder="New Answer"> 
 							</div>
 							
