--- a/src/main/resources/templates/techquiz.html
+++ b/src/main/resources/templates/techquiz.html
@@ -46,7 +46,8 @@
     <h1>TECHQUIZ</h1>
    <h3 align="right"><a href="viewAll"><input type="submit" class="button" value="Create Exam"/></a>&nbsp;&nbsp;&nbsp;&nbsp;
     
-      &nbsp;&nbsp;&nbsp;&nbsp; <a href="viewAllQn"><input type="submit" class="button" value="ADD Question"/></a>
+      &nbsp;&nbsp;&nbsp;&nbsp; <a href="viewAllQn"><input type="submit" class="button" value="ADD Question"/></a>&nbsp;&nbsp;&nbsp;&nbsp;
+       &nbsp;&nbsp;&nbsp;&nbsp;    <a href="viewFile"><input type="submit" class="button" value="ADD File"/></a></h3>
      </h3>
     
        
