--- a/src/main/resources/templates/read.html
+++ b/src/main/resources/templates/read.html
@@ -61,7 +61,12 @@
                 <td th:text="${list.count}"></td>
                  <td th:text="${list.level}"></td>
                  <td><a th:href="@{/dlt/{id}(id=${list.id})}">Delete</a></td>
-                 <td><a th:href="@{/edt/{id}(id=${list.id})}">Edit</a></td>
+                 <td>
+                                    <a th:href="@{/edit/{id}(id=${list.id})}"
+                                             class="btn btn-primary">Edit
+                                        <i class="fas fa-user-edit ml-2"></i>
+                                    </a>
+                                </td>
                 
                        
             </tr>   
