--- a/src/main/resources/templates/createfile.html
+++ b/src/main/resources/templates/createfile.html
@@ -46,7 +46,7 @@
     <h1 align="center">TECHQUIZ</h1>
     <h3 align="center">Create Exam</h3>
 </div>
-<form action="#" th:action="@{/saveFile}"  th:object="${examDto}" method="GET">
+<form action="#" th:action="@{/savexam}"  th:object="${examDto}" method="GET">
 
 	<div class="row">
 			<div class="form-group col-md-8">
