--- a/src/main/resources/templates/createquestion.html
+++ b/src/main/resources/templates/createquestion.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>techquiz</title>
     <style>
-	.button {
+  .button {
   display: inline-block;
   padding: 10px 20px;
   font-size: 24px;
@@ -26,15 +26,15 @@
   box-shadow: 0 5px #666;
   transform: translateY(4px);
 }
-	div
-	{
-		padding-top: 40px;
-		padding-right: 30px;
-		padding-left: 80px;
-		padding-bottom: 20px;
-	}
+  div
+  {
+    padding-top: 40px;
+    padding-right: 30px;
+    padding-left: 80px;
+    padding-bottom: 20px;
+  }
 
-	.header {
+  .header {
   background-color: #ff0080;
   padding: 20px;
   text-align: center;
@@ -44,11 +44,9 @@
 <body>
 <div class="header">
     <h1>TECHQUIZ</h1>
-   <h3 align="right"><a href="viewAll"><input type="submit" class="button" value="Create Exam"/></a>&nbsp;&nbsp;&nbsp;&nbsp;
+   <h3 align="right"><a href="newquestion"><input type="submit" class="button" value="Single choice"/></a>&nbsp;&nbsp;&nbsp;&nbsp;
     
-      &nbsp;&nbsp;&nbsp;&nbsp; <a href="viewAllQn"><input type="submit" class="button" value="ADD Question"/></a>&nbsp;&nbsp;&nbsp;&nbsp;
-    
-      &nbsp;&nbsp;&nbsp;&nbsp; <a href="createquestion"><input type="submit" class="button" value="create Question"/></a>
+      &nbsp;&nbsp;&nbsp;&nbsp; <a href="newquestion2"><input type="submit" class="button" value="True or false"/></a>
      </h3>
     
        
