--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -68,7 +68,7 @@
 				</div>
 			</form>
 			<div class="form-group">
-				<span>New user? <a href="/" th:href="@{/register}">Register
+				<span>New user? <a href="/" th:href="@{/reg}">Register
 						here</a></span>
 			</div>
 		</div>
