--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -36,6 +36,27 @@
 							</div>
 							
 							<div class="form-group col-md-6">
+								<label for="option1" class="col-form-label">Option1</label> <input
+									type="text" th:field="*{option1}" class="form-control" id="option1"
+									placeholder="New Option1"> 
+							</div>
+							<div class="form-group col-md-6">
+								<label for="option2" class="col-form-label">Option2</label> <input
+									type="text" th:field="*{option2}" class="form-control" id="option2"
+									placeholder="New Option2"> 
+							</div>
+							<div class="form-group col-md-6">
+								<label for="option3" class="col-form-label">Option3</label> <input
+									type="text" th:field="*{option3}" class="form-control" id="option3"
+									placeholder="New Option3"> 
+							</div>
+							<div class="form-group col-md-6">
+								<label for="option4" class="col-form-label">Option4</label> <input
+									type="text" th:field="*{option4}" class="form-control" id="option4"
+									placeholder="New Option4"> 
+							</div>
+							
+							<div class="form-group col-md-6">
 								<label for="answer" class="col-form-label">Answer</label> <input
 									type="text" th:field="*{answer}" class="form-control" id="answer"
 									placeholder="New Answer"> 
