http://jira.bytatech.com:8080/browse/IN-10990

--- a/src/main/resources/templates/read.html
+++ b/src/main/resources/templates/read.html
@@ -1,21 +1,53 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<link rel="stylesheet" href="images/Azulmedia.css" type="text/css" />
-<title>read</title>
+    <meta charset="UTF-8">
+    <title>viewAll</title>
+    <style>
+	.button {
+  display: inline-block;
+  padding: 10px 20px;
+  font-size: 24px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+  background-color: #ff0080;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 9px #999;
+}
+
+.button:hover {background-color: #ff0040}
+
+.button:active {
+  background-color: #ff0040;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+	div
+	{
+		padding-top: 40px;
+		padding-right: 30px;
+		padding-left: 80px;
+		padding-bottom: 20px;
+	}
+	
+	.header {
+  background-color: #ff0080;
+  padding: 20px;
+  text-align: center;
+}
+  </style>
 </head>
 <body>
-<div id="wrap">
-  <div id="header">
-    <h1 id="logo">TECHQUIZ<span class="gray">app</span></h1>
-   
-    <div id="menu">
-      <ul>
-        <li><a href="createxam">ADD</a></li>
-        
-      </ul>
-    </div>
+<div class="header">
+        <h1>TECHQUIZ</h1>
+        <h3>
+        <a href="createxam"><input type="submit" class="button" value="ADD"/></a>
+        </h3>
+		</div>
   </div>
 		<br>
     <table align=center border=1px >
