jira.bytatech.com:8080/browse/IN-11006

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -42,17 +42,7 @@
   </style>
 </head>
 <body>
-<div class="header">
-        <h1>TECHQUIZ</h1>
-        <h3>
-        <!-- <a href="createxam"><input type="submit" class="button" value="ADD"/></a> -->
-        </h3>
-		</div>
-		<br>
-    <table align=center border=1px >
-		<th>Name</th>
-    <th>email</th>
-
+		
  <div class="header">
   <h1 align="center">Dashboard</h1>
   <form action="#" th:action = "@{/}" name="user" th:object="${user}">
@@ -64,8 +54,8 @@
                 
                        
             </tr>   
-        </table>
+      
     <br>
-<center><a href="/instruction"><input type="submit" class="button" value=Back></button></center>
+<center><a href="http://localhost:8081/techquiz"><input type="submit" class="button" value=Back></button></center>
 </body>
 </html>
