--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -44,7 +44,7 @@
 <body>
 <div class="header">
         <h1>TECH QUIZ</h1>
-       <a href="newquestion"><input type="submit" class="button" value="ADD"/></a>
+       <a href="createquestion"><input type="submit" class="button" value="ADD"/></a>
 		</div>
 		<br>
     <table align=center border=1px >
