--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -2,43 +2,13 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+     <link rel="stylesheet"
+          href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+          crossorigin="anonymous">
     <title>viewAll</title>
     <style>
-	.button {
-  display: inline-block;
-  padding: 10px 20px;
-  font-size: 24px;
-  cursor: pointer;
-  text-align: center;
-  text-decoration: none;
-  outline: none;
-  color: #fff;
-  background-color: #ff0080;
-  border: none;
-  border-radius: 15px;
-  box-shadow: 0 9px #999;
-}
 
-.button:hover {background-color: #ff0040}
-
-.button:active {
-  background-color: #ff0040;
-  box-shadow: 0 5px #666;
-  transform: translateY(4px);
-}
-	div
-	{
-		padding-top: 40px;
-		padding-right: 30px;
-		padding-left: 80px;
-		padding-bottom: 20px;
-	}
-	
-	.header {
-  background-color: #ff0080;
-  padding: 20px;
-  text-align: center;
-}
   </style>
 </head>
 <body>
